--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,19 @@
 
 
 /* ==========================================================================
-   Author's custom styles
+   Head Turn
    ========================================================================== */
 
 
 
+#headturn{
+	position: relative;
+}
 
+#headturn-container{
+	position: relative;
+	overflow-x: hidden;
+}
 
 
 
